app/styles/layout/theme/_shale-base.scss
// Short-Hed
html,
body {
  overflow-x: hidden;
  width: 100%;
}

h1 {
  color: $white;
  font-family: league-gothic;
  font-size: 4em;
  font-weight: 300;
  line-height: .95em;
  text-align: left;
  text-transform: uppercase;

  @include media($bp-landing-large) {
    font-size: 13em;
  }

  @include media($bp-landing-medium) {
    font-size: 10em;
  }

  @include media($bp-landing-small) {
    font-size: 7em;
  }
}

h2,
h3,
h4,
h5 {
  color: $denim;
  font-family: pt-sans;
  font-size: 1.5em;
  font-weight: 600;
  letter-spacing: .05em;
  line-height: 1.2em;
  margin-bottom: 1em;
  text-align: left;
}

// Long-Hed
h2 {
  color: $dark-denim;
  text-transform: uppercase;
}

// Main Tagline, Slideshow Title
h3 {
  color: $white;
  letter-spacing: .06em;
  margin-bottom: 1em;
}

h4 {
  clear: both;
  font-family: pt-sans-narrow;
  font-size: 1.5em;
  font-weight: 600;
  position: relative;
  text-align: left;
}

h5 {
  font-size: 1em;
}

p {
  font-family: pt-sans;
  font-size: 1em;
  line-height: 1.2em;
  text-align: left;
}

hr.shale-yellow {
  background-color: $yellow;
  border: 0 none;
  height: 2px;
  margin-bottom: 1em;
  width: 100%;
}

.yellow {
  color: $yellow;
}

a {
  color: $off-white;

  &:hover {
    color: $light-denim;
  }
}

table {
  color: $off-white;
  font-family: pt-sans;
  font-size: .9em;
  letter-spacing: 1px;

  @include media($bp-table) {
    border-top: 0;
  }

}

th {
  border-bottom: 0;
  color: $white;
  font-size: 1.1em;
  font-weight: 800;
  line-height: 1.2em;
}

tr {
  &:nth-child(odd) td {
    background-color: $grey;
  }

  &.extra-header {
    td {
      padding: 1em;
      font-weight: 800;
    }
  }
}

td {
  font-size: 1em;
}

.mfp-iframe-scaler {
  button {
    background-color: rgba(0, 0, 0, 0);
  }
}

